# llm-poetry-master

./: .env  .gitignore  README.md  main.py  pyproject.toml  run.py  sandbox.py
app/: main.py  tmp_main.py
docs/: 100-local-llm.md  980-stuck.md  999-memo.md
shells/: dev.sh  init.sh
tests/: test_health.py
