[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ShunsukeNONOMURA <shunsuke.nonomura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-cpp-python = "^0.2.53"
gradio = "^4.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
